# cbig_network_correspondence

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  ExampleUsage.ipynb  LICENCE  NCT_env.yml  README.md  Usage.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/actions/python-poetry-env/: action.yml
.github/workflows/: dependencies.yml  draft_release.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/cbig_network_correspondence/: __init__.py  __install__.py  compute_overlap_with_atlases.py  grab_data_info.py  load_example.py  visualize_overlap_lib.py  visualize_report_lib.py
src/cbig_network_correspondence/data/: atlas_list
src/cbig_network_correspondence/data/atlas_config/: AL20  AS200K17  AS200Y17  AS400K17  AS400Y17  EG17  EG286_12  HCPICA  MG360J12  TL12  TY17  TY7  UKBICA  WS90_14  XS268_8  XS368_8
src/cbig_network_correspondence/data/atlases/fs_LR_32k/Glasser/: MG360J12.mat
src/cbig_network_correspondence/data/examples/: Exemplar1_pos
src/cbig_network_correspondence/data/network_assignment/: AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  Shen2688networks.mat  Shen3688networks.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/network_names/: AL20  AS200K17  AS400K17  AS400Y17  EG17  EG286_12  HCPICA  MG360J12  TL12  TY17  TY7  UKBICA  WS90_14  XS368_8
src/cbig_network_correspondence/data/overlap_results/AL20/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/AS200K17/: AL20.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/AS200Y17/: AL20.mat  AS200K17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/AS400K17/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/AS400Y17/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/EG17/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/EG286_12/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/HCPICA/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/MG360J12/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/TL12/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/TY17/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/TY7/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/UKBICA/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/WS90_14/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/XS268_8/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS368_8.mat
src/cbig_network_correspondence/data/overlap_results/XS368_8/: AL20.mat  AS200K17.mat  AS200Y17.mat  AS400K17.mat  AS400Y17.mat  EG17.mat  EG286_12.mat  HCPICA.mat  MG360J12.mat  TL12.mat  TY17.mat  TY7.mat  UKBICA.mat  WS90_14.mat  XS268_8.mat  XS368_8.mat
(+135 files in other folders)
