[tool.poetry]
name = "cbig_network_correspondence"
version = "0.0.5"
description = "A toolbox for exploring network correspondence across atlases"
authors = [
    "Ruby Kong <roo.cone@gmail.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://rubykong.github.io/cbig_network_correspondence"
homepage = "https://rubykong.github.io/cbig_network_correspondence"
repository = "https://github.com/rubykong/cbig_network_correspondence"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "cbig_network_correspondence", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
natsort = "^8.3.1"
numpy = "^1.20.3"
nibabel = "^5.0.1"
scipy = "^1.5.3"
seaborn = "^0.11.2"

[tool.poetry.scripts]
my-script = "cbig_network_correspondence.__install__:main"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov cbig_network_correspondence \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
