[tool.poetry]
name = "cbig_network_correspondence"
version = "0.2.1"
description = "A toolbox for exploring network correspondence across atlases"
authors = [
    "Ruby Kong <roo.cone@gmail.com>",
]
license = "MIT"
readme = "README.md"

homepage = "https://rubykong.github.io/cbig_network_correspondence"
repository = "https://github.com/rubykong/cbig_network_correspondence"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "cbig_network_correspondence", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9.19, <4.0"
brainspace = "0.1.10"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
colorcet = "3.1.0"
contourpy = "1.2.1"
cycler = "0.12.1"
fonttools = "4.53.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
idna = "3.7"
importlib-resources = "6.4.0"
joblib = "1.4.2"
kiwisolver = "1.4.5"
lxml = "5.2.2"
matplotlib = "3.9.0"
natsort = "8.4.0"
nibabel = "5.2.1"
nilearn = "0.10.4"
numpy = "1.26.4"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.3.0"
plottable = "0.1.5"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
regfusion = "0.1.0"
requests = "2.32.3"
scikit-learn = "1.5.0"
scipy = "1.13.1"
seaborn = "0.13.2"
smmap = "5.0.1"
threadpoolctl = "3.5.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
vtk = "9.3.0"
zipp = "3.19.2"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov cbig_network_correspondence \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
